Changes in 4.1:
- Check if source files are missing before moving them (265607)
- Fix scanextender showing when they are not supposed to (259483)
- Fix mediaplayer unable to stop in buffering mode when streaming (266100)

Changes in 4.1rc1:
- Make sure that apply button of config dialog is enabled properly when the group changes in the scanfolder settings
- Add kio-magnet
- Improve performance of ktorrent in situations where there are many torrents (262571)
- Fix memory leak on exit (263802)
- Fix tab bar not matching TabBarWidget state in some circumstances (263068)
- Fix libktorrent not gettting updated when the download of a magnet link finishes and the FileSelectDlg is shown
- Update view tab when switching to it, fixes data scan widget showing in the wrong place (259483)
- Update view captions every GUI update (264215)
- Use user modified path for file column in chunks view (264814)
- Fix QM bug causing torrents to get started when it is not needed (262570)

Changes in 4.1beta1:
- Remove libktupnp it is now part of libktorrent
- Add support for superseeding (171661)
- Change from and to fields to always ensure that from is smaller then to in the bandwidth scheduler plugin (225951)
- Show if a peer is using the µTP protocol or not 
- Cleanup file dialog filters for torrents and make sure that files named torrent, are also seen by the filter (241259)
- Ensure that webinterface plugin works properly with bindv6only flag on (238688)
- Add option to not restore the previous session of the search plugin (233288)
- Save suspended state on exit and restore on restart (241675)
- Add support for cookies in syndication plugin (244967)
- Change GUI to use KParts
- Add feature to set the move on completion directory in the syndication plugin filters
- Improve display of errors in the syndication plugin when downloading a feed fails (246421)
- Make ChunkDownloadView and PeerView use a QSortFilterProxyModel (246835)