@@ -2,6 +2,7 @@ Changes in 4.1:
 - Check if source files are missing before moving them (265607)
 - Fix scanextender showing when they are not supposed to (259483)
 - Fix mediaplayer unable to stop in buffering mode when streaming (266100)
+- KDE 4.4 compatibility fix in search plugin
 
 Changes in 4.1rc1:
 - Make sure that apply button of config dialog is enabled properly when the group changes in the scanfolder settings
